# cmake-fetchcontent-conflicting-targets

./: CMakeLists.txt  README.md  foo.c
.cache/clangd/index/: foo.c.B3AD3DCEB42A0C70.idx  test_foo.c.61A49CEBF9F3A92C.idx
tests/: test_foo.c
